 * vi: backspace on start of line now doesn't join lines
 * doc: mention in tutorial that default is hexadecimal

Thanks to Christian Johansson and polluks for suggestions!

2015-12-30: v1.4.6

 * bugfix: disabled tail call elimination for literal ['] [char]
           to avoid some crashes
 * bugfix: <, rshift, u. did not support negative numbers
 * forth: made word finding + numbers case insensitive
 * forth: renamed char to getc, and added a new char that works
          according to the Forth 2012 standard.
 * forth: added abort, abort", 2@, 2!, char+, chars, align, aligned
 * forth: key, key? now work only with keyboard
 * forth: made quit reset input and fall back to keyboard
 * forth: fill ( ch addr len ) changed to fill ( addr len ch )
 * forth: allot ( -- n ) changed to allot ( -- )
 * forth: made base a variable instead of a value
 * forth: changed variable; data field is now after code field

Thanks to Christian Johansson for suggestions!

2016-01-04: v1.5.0 - Forth 2012 core standard compliant!

 * forth: made +loop work according to standard
 * forth: added support for #, $, %, char parsing.
	      e.g. #123, $d020, %1001001, 'z'
 * forth: ' now aborts if it does not find a word
 * forth: made "type" disable c64 quote mode (fixes "words")
 * forth: state ( -- flag ) changed to state ( -- addr )
 * forth: added count, >body, <#, #>, hold, sign, #, #s, >number, move,
		  accept
 * forth: removed hide, hide-to, hidden, forget, scratch, cmove, cmove>
 * forth: fixed yet another tail call elimination crash
 * forth: made while/repeat implementation conform to standard
 * forth: made word conform to standard
 * forth: made "immediate", "no-tce" non-immediate
 * forth: made sure immediate does not toggle

Thanks to polluks for suggestions!

v1.5.1

 * forth: made .( immediate
 * forth: renamed load => included
 * forth: added include (e.g. "include gfx" loads gfx module)
 * forth: added marker
 * forth: made dump work in decimal mode (thx kevin reno)